--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/ace-documentation"]
 	path = themes/ace-documentation
-	url = https://github.com/vantagedesign/ace-documentation
+	url = https://github.com/NICNE0/ace-documentation-brundisium.git
