--- a/config.toml
+++ b/config.toml
@@ -18,7 +18,7 @@ googleAnalytics = ""
 [params]
 ordersectionsby = "weight" # ordersectionsby = "title"
 disableSearch = false # default is false
-disableReadmoreNav = false # set true to hide prev/next navigation, default is false
+disableReadmoreNav = true # set true to hide prev/next navigation, default is false
 highlightClientSide = false # set true to use highlight.pack.js instead of the default hugo chroma highlighter
 menushortcutsnewtab = true # set true to open shortcuts links to a new tab/window
 
